BUG2768 [P] Tags line wraps incorrectly - revert

--- a/src/client/src/ui/ProductOverview/styles.scss
+++ b/src/client/src/ui/ProductOverview/styles.scss
@@ -541,8 +541,6 @@
           border-top: 1px solid #e5e5e5;
         }
         &-tags {
-          display: flex;
-          flex-wrap: wrap;
           font-size: 15px;
           color: $product-overview-main-color;
           font-family: $poppins;
